# serializer version: 1
# name: test_decoding_and_encoding[RTCConfiguration-RTCConfiguration_empty.json][dataclass]
  dict({
    'ice_servers': list([
    ]),
  })
# ---
# name: test_decoding_and_encoding[RTCConfiguration-RTCConfiguration_multiple_iceServers.json][dataclass]
  dict({
    'ice_servers': list([
      dict({
        'credential': None,
        'urls': 'stun:stun.home-assisant.io:80',
        'username': None,
      }),
      dict({
        'credential': 'credential',
        'urls': list([
          'stun:stun.home-assisant.io:80',
          'stun:stun.l.google.com:19302',
        ]),
        'username': 'username',
      }),
    ]),
  })
# ---
# name: test_decoding_and_encoding[RTCConfiguration-RTCConfiguration_one_iceServer.json][dataclass]
  dict({
    'ice_servers': list([
      dict({
        'credential': None,
        'urls': 'stun:stun.home-assisant.io:80',
        'username': None,
      }),
    ]),
  })
# ---
# name: test_decoding_and_encoding[RTCIceCandidate-RTCIceCandidate_candidate.json][dataclass]
  dict({
    'candidate': '3932168448 1 udp 1694498815 1.2.3.4 10676 typ srflx raddr 0.0.0.0 rport 37566',
  })
# ---
# name: test_decoding_and_encoding[RTCIceCandidate-RTCIceCandidate_end.json][dataclass]
  dict({
    'candidate': '',
  })
# ---
# name: test_decoding_and_encoding[RTCIceServer-RTCIceServer_only_urls_list.json][dataclass]
  dict({
    'credential': None,
    'urls': list([
      'stun:stun.home-assisant.io:80',
      'stun:stun.l.google.com:19302',
    ]),
    'username': None,
  })
# ---
# name: test_decoding_and_encoding[RTCIceServer-RTCIceServer_only_urls_string.json][dataclass]
  dict({
    'credential': None,
    'urls': 'stun:stun.home-assisant.io:80',
    'username': None,
  })
# ---
# name: test_decoding_and_encoding[RTCIceServer-RTCIceServer_urls_list.json][dataclass]
  dict({
    'credential': 'credential',
    'urls': list([
      'stun:stun.home-assisant.io:80',
      'stun:stun.l.google.com:19302',
    ]),
    'username': 'username',
  })
# ---
# name: test_decoding_and_encoding[RTCIceServer-RTCIceServer_urls_string.json][dataclass]
  dict({
    'credential': 'credential',
    'urls': 'stun:stun.home-assisant.io:80',
    'username': 'username',
  })
# ---
